Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI422.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long BASEADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
/**
*
*  Structs used by the BTI422 Driver.
*
**/
typedef struct
{
	BYTE   data;
	USHORT status;
	ULONG  timetag;
	ULONG  timetagh;
} FIFOFIELDS422;
typedef FIFOFIELDS422 * LPFIFOFIELDS422;
/**
*
*  BTI422 Driver functions.
*
**/

BTI422API INT __stdcall BTI422_FIFOCheckRx(INT portnum,HCORE handleval);
BTI422API INT __stdcall BTI422_FIFOCheckTx(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOConfigRx(ULONG configval,INT threshold,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOConfigTx(ULONG configval,INT threshold,INT portnum,HCORE handleval);
BTI422API INT __stdcall BTI422_FIFODataRd(LPBYTE buf,INT count,LPULONG status,INT portnum,HCORE handleval);
BTI422API INT __stdcall BTI422_FIFODataWr(LPBYTE buf,INT count,ULONG ctrlflags,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOFlushRx(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOFlushTx(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOGapWr(USHORT gapcount,ULONG ctrlflags,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_ParamAmplitudeConfig(ULONG configval,USHORT dacval,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_ParamAmplitudeGet(LPUSHORT dacval,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_PortConfig(ULONG configval,USHORT bitrateflag,INT portnum,HCORE handleval);
BTI422API VOID __stdcall BTI422_PortGetCount(LPINT portcount,HCORE handleval);
BTI422API ULONG __stdcall BTI422_PortGetInfo(USHORT infotype,INT portnum,HCORE handleval);
BTI422API BOOL __stdcall BTI422_PortIs422(INT portnum,HCORE handleval);
BTI422API BOOL __stdcall BTI422_PortStart(INT portnum,HCORE handleval);
BTI422API BOOL __stdcall BTI422_PortStop(INT portnum,HCORE handleval);
/**
*
*  Internal functions used by the BTI422 Driver.
*
**/

BTI422API INT __stdcall BTI422_DllUsageCount(VOID);
BTI422API INT __stdcall BTI422_FIFOBlockRd(LPFIFOFIELDS422 fifofields,INT count,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_ParamClockConfig(ULONG period,USHORT divval,INT portnum,HCORE handleval);
BTI422API BASEADDR __stdcall BTI422_PortCreate(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_PortReset(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_TestProtocol(HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_VARFindPort(LPUSHORT addrval,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_VARLastTTGet(LPULONG tth,LPULONG ttl,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_VARLastTTSet(ULONG tth,ULONG ttl,INT portnum,HCORE handleval);
BTI422API BOOL __stdcall BTI422_VARPortHasLocalFIFO(INT portnum,HCORE handleval);