Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI422NET.VB

Imports System
Imports System.Runtime.InteropServices

Module BTI422VB

    '/**
    '*
    '*  BTI422 WIN32 DRIVER  Version 1.2.0  (05/11/2015)
    '*  Copyright (c) 2004-2015
    '*  Ballard Technology, Inc.
    '*  www.ballardtech.com
    '*  support@ballardtech.com
    '*  ALL RIGHTS RESERVED
    '*
    '*  NAME:   BTI422NET.VB -- VB.NET 32-bit/64-bit
    '*                      BTI422 Driver Include Header File.
    '*
    '**/

    '/**
    '*
    '*  Structs used by the BTI422 Driver.
    '*
    '**/
    <StructLayout(LayoutKind.Sequential)> Public Structure FIFOFIELDS422
        Public data As Byte
        Public status As UInt16
        Public timetag As UInt32
        Public timetagh As UInt32
    End Structure

    '/**
    '*
    '*  BTI422 Driver functions.
    '*
    '**/

    '/**
    '*
    '*  Internal functions used by the BTI422 Driver.
    '*
    '**/

    Private Class BTI422_32
        Public Declare Function BTI422_FIFOCheckRx Lib "BTI422.DLL" Alias "_BTI422_FIFOCheckRx@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOCheckTx Lib "BTI422.DLL" Alias "_BTI422_FIFOCheckTx@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOConfigRx Lib "BTI422.DLL" Alias "_BTI422_FIFOConfigRx@16" (ByVal configval As UInt32, ByVal threshold As Int32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOConfigTx Lib "BTI422.DLL" Alias "_BTI422_FIFOConfigTx@16" (ByVal configval As UInt32, ByVal threshold As Int32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFODataRd Lib "BTI422.DLL" Alias "_BTI422_FIFODataRd@20" (ByVal buf As Byte(), ByVal count As Int32, ByRef status As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFODataWr Lib "BTI422.DLL" Alias "_BTI422_FIFODataWr@20" (ByVal buf As Byte(), ByVal count As Int32, ByVal ctrlflags As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOBlockRd Lib "BTI422.DLL" Alias "_BTI422_FIFOBlockRd@16" (<[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=1)> ByVal fifofields As FIFOFIELDS422(), ByVal count As Int32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOFlushRx Lib "BTI422.DLL" Alias "_BTI422_FIFOFlushRx@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOFlushTx Lib "BTI422.DLL" Alias "_BTI422_FIFOFlushTx@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOGapWr Lib "BTI422.DLL" Alias "_BTI422_FIFOGapWr@16" (ByVal gapcount As UInt16, ByVal ctrlflags As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_ParamAmplitudeConfig Lib "BTI422.DLL" Alias "_BTI422_ParamAmplitudeConfig@16" (ByVal configval As UInt32, ByVal dacval As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_ParamAmplitudeGet Lib "BTI422.DLL" Alias "_BTI422_ParamAmplitudeGet@12" (ByRef dacval As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_PortConfig Lib "BTI422.DLL" Alias "_BTI422_PortConfig@16" (ByVal configval As UInt32, ByVal bitrateflag As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI422_PortGetCount Lib "BTI422.DLL" Alias "_BTI422_PortGetCount@8" (ByRef portcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI422_PortGetInfo Lib "BTI422.DLL" Alias "_BTI422_PortGetInfo@12" (ByVal infotype As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI422_PortIs422 Lib "BTI422.DLL" Alias "_BTI422_PortIs422@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_PortStart Lib "BTI422.DLL" Alias "_BTI422_PortStart@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_PortStop Lib "BTI422.DLL" Alias "_BTI422_PortStop@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_ParamClockConfig Lib "BTI422.DLL" Alias "_BTI422_ParamClockConfig@16" (ByVal period As UInt32, ByVal divval As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_DllUsageCount Lib "BTI422.DLL" Alias "_BTI422_DllUsageCount@0" () As Int32
        Public Declare Function BTI422_PortCreate Lib "BTI422.DLL" Alias "_BTI422_PortCreate@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI422_PortReset Lib "BTI422.DLL" Alias "_BTI422_PortReset@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_TestProtocol Lib "BTI422.DLL" Alias "_BTI422_TestProtocol@4" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_VARPortHasLocalFIFO Lib "BTI422.DLL" Alias "_BTI422_VARPortHasLocalFIFO@8" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_VARLastTTGet Lib "BTI422.DLL" Alias "_BTI422_VARLastTTGet@16" (ByRef tth As UInt32, ByRef ttl As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_VARLastTTSet Lib "BTI422.DLL" Alias "_BTI422_VARLastTTSet@16" (ByVal tth As UInt32, ByVal ttl As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_VARFindPort Lib "BTI422.DLL" Alias "_BTI422_VARFindPort@12" (ByRef addrval As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
    End Class

    Private Class BTI422_64
        Public Declare Function BTI422_FIFOCheckRx Lib "BTI42264.DLL" Alias "BTI422_FIFOCheckRx" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOCheckTx Lib "BTI42264.DLL" Alias "BTI422_FIFOCheckTx" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOConfigRx Lib "BTI42264.DLL" Alias "BTI422_FIFOConfigRx" (ByVal configval As UInt32, ByVal threshold As Int32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOConfigTx Lib "BTI42264.DLL" Alias "BTI422_FIFOConfigTx" (ByVal configval As UInt32, ByVal threshold As Int32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFODataRd Lib "BTI42264.DLL" Alias "BTI422_FIFODataRd" (ByVal buf As Byte(), ByVal count As Int32, ByRef status As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFODataWr Lib "BTI42264.DLL" Alias "BTI422_FIFODataWr" (ByVal buf As Byte(), ByVal count As Int32, ByVal ctrlflags As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOBlockRd Lib "BTI42264.DLL" Alias "BTI422_FIFOBlockRd" (<[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=1)> ByVal fifofields As FIFOFIELDS422(), ByVal count As Int32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOFlushRx Lib "BTI42264.DLL" Alias "BTI422_FIFOFlushRx" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOFlushTx Lib "BTI42264.DLL" Alias "BTI422_FIFOFlushTx" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_FIFOGapWr Lib "BTI42264.DLL" Alias "BTI422_FIFOGapWr" (ByVal gapcount As UInt16, ByVal ctrlflags As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_ParamAmplitudeConfig Lib "BTI42264.DLL" Alias "BTI422_ParamAmplitudeConfig" (ByVal configval As UInt32, ByVal dacval As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_ParamAmplitudeGet Lib "BTI42264.DLL" Alias "BTI422_ParamAmplitudeGet" (ByRef dacval As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_PortConfig Lib "BTI42264.DLL" Alias "BTI422_PortConfig" (ByVal configval As UInt32, ByVal bitrateflag As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI422_PortGetCount Lib "BTI42264.DLL" Alias "BTI422_PortGetCount" (ByRef portcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI422_PortGetInfo Lib "BTI42264.DLL" Alias "BTI422_PortGetInfo" (ByVal infotype As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI422_PortIs422 Lib "BTI42264.DLL" Alias "BTI422_PortIs422" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_PortStart Lib "BTI42264.DLL" Alias "BTI422_PortStart" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_PortStop Lib "BTI42264.DLL" Alias "BTI422_PortStop" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_ParamClockConfig Lib "BTI42264.DLL" Alias "BTI422_ParamClockConfig" (ByVal period As UInt32, ByVal divval As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_DllUsageCount Lib "BTI42264.DLL" Alias "BTI422_DllUsageCount" () As Int32
        Public Declare Function BTI422_PortCreate Lib "BTI42264.DLL" Alias "BTI422_PortCreate" (ByVal portnum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI422_PortReset Lib "BTI42264.DLL" Alias "BTI422_PortReset" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_TestProtocol Lib "BTI42264.DLL" Alias "BTI422_TestProtocol" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_VARPortHasLocalFIFO Lib "BTI42264.DLL" Alias "BTI422_VARPortHasLocalFIFO" (ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_VARLastTTGet Lib "BTI42264.DLL" Alias "BTI422_VARLastTTGet" (ByRef tth As UInt32, ByRef ttl As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_VARLastTTSet Lib "BTI42264.DLL" Alias "BTI422_VARLastTTSet" (ByVal tth As UInt32, ByVal ttl As UInt32, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI422_VARFindPort Lib "BTI42264.DLL" Alias "BTI422_VARFindPort" (ByRef addrval As UInt16, ByVal portnum As Int32, ByVal handleval As IntPtr) As Int32
    End Class
